--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "esbuild": "0.18.11"
+    "esbuild": "0.18.11",
+    "esbuild-plugin-compress": "^1.0.1"
   }
 }
